--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
+    <!-- CSS stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Pop Quiz | Stay current with the world</title>
 </head>
 <body>
     <head>
+        <div class="row">
+            <a href="index.html" class="col-md-4"></a>
+            <div class="col-md-8">
+
+            </div>
+        </div>
 
     </head>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 
     <!-- Bootstrap CDN Script link -->
