--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <head>
         <div class="row">
-            <a href="index.html" class="col-md-4"></a>
+            <a href="index.html" class="col-md-4 logo"></a>
             <div class="col-md-8">
 
             </div>
