Update icons for navbar tabs in homepage

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-home"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 m-0 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-graduation-cap"></i><span>Quiz</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-question-circle"></i><span>Quiz</span></a>
                             </li>
                             <li class="col-6 m-0 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-address-card"></i><span>Leaderboard</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-trophy"></i><span>Leaderboard</span></a>
                             </li>
                             <li class="col-6 m-0 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-cloud-download-alt"></i><span>Credits</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-copyright"></i><span>Credits</span></a>
                             </li>
                         </ul>
                     </div>
