Create footer section to include credit section, social links section and download leaderboard sheet section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,47 @@
     <section>
 
     </section>
-    <footer>
-
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub"><i class="fas fa-copyright"></i>  Credits</h5>
+                <p class="inline-block">Special mention to my mentor Guido and those at Code Institute, who continuously encouraged me to get out of my comfort zone and try new things. 
+                    I hope that you too, will break out of your shell and try something new today.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download Leaderboard</h5>
+                <p class="inline-block">Need a printable version of the leaderboard? Download it here.
+                    <a href="#" target="_black" class="cv-pdf">
+                        <i class="fas fa-file-download" aria-hidden="true"></i>
+                        <span class="sr-only">Download link</span>
+                    </a>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Follow Us</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span> 
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span> 
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>  
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <!-- Bootstrap CDN Script link -->
