Add ranking table to middle section of the homepage

--- a/index.html
+++ b/index.html
@@ -52,8 +52,129 @@
             </div>
         </div>
     </header>
-    <section>
-
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-header uppercase">Top 5</h3>
+                    </div>
+                </div>
+                <div class="person-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            First (Leader):
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Rano Fisher
+                        </p>
+                    </div>
+                </div>
+                <div class="person-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Second (runners up):
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            David McKenzie
+                        </p>
+                    </div>
+                </div>
+                <div class="person-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Third Place:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Gilian McDonald
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase text-white">Leaderboard</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <table class="table table-dark">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">3</th>
+                                <td colspan="2">Larry the Bird</td>
+                                <td>@twitter</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                </div>
+                <!-- <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon far fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>I follow form as well as function. I understand the importance of UX design and good user experience. 
+                                    As such, I always design based on users' needs and strive to continuously improve the products.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me</h4>
+                                <p>I am determined and persistent. 
+                                    I have a can do attitude and believe in collaboration.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div class="row">
