Add start button and info about quiz button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
                 <div class="row g-0 bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Try our pop quiz and stay current with the world!</h1>
+                        
+                        <!-- start button -->
+                        <div><button>Start</button></div>
                         <h2 class="title">Learn something new each day.</h2>
+                        <div>
+                        <!-- info -->
+                        <div>
+                            <div>
+                                <span>Rules</span>
+                            </div>
+                            <div><span></span></div>
+                            <div><span></span></div>
+                            <div><span></span></div>
+                            <div><span></span></div>
+                            <div><span></span></div>
+                        </div>
                     </div>
                 </div>
                 <div class="row g-0">
