Create exit quiz and continue quiz button

--- a/index.html
+++ b/index.html
@@ -27,22 +27,31 @@
             <div class="col-md-8">
                 <div class="row g-0 bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Try our pop quiz and stay current with the world!</h1>
+                        <h1 class="name">Try our pop quiz!</h1>
                         
                         <!-- start button -->
                         <div><button>Start</button></div>
-                        <h2 class="title">Learn something new each day.</h2>
+                        <!-- <h2 class="title">Learn something new each day.</h2> -->
                         <div>
-                        <!-- info -->
+
+                        <!-- quiz info -->
                         <div>
-                            <div>
-                                <span>Rules</span>
+                            <div class="rule-box">
+                                <span class="rule-title">Rules</span>
                             </div>
-                            <div><span></span></div>
-                            <div><span></span></div>
-                            <div><span></span></div>
-                            <div><span></span></div>
-                            <div><span></span></div>
+                            <div class="quiz-rule">
+                                <div class="rule">1. You will have 15 seconds for each question.<span></span></div>
+                                <div class="rule">2. You cannot undo what you clicked.<span></span></div>
+                                <div class="rule">3. There are 10 questions in total.<span></span></div>
+                                <div class="rule">4. Once you leave the quiz, that's it!<span></span></div>
+                                <div class="rule">5. There is a maximum of 1000 points to be gained.<span></span></div>
+                            </div>
+                            <div class="buttons">
+                                <button class="quit">Exit</button>
+                                <button class="quit">continue</button>
+                            </div>
+
+                            
                         </div>
                     </div>
                 </div>
