--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-    <!-- JS link -->
+    <!-- Link to fix Favicon error -->
+    <link rel="shortcut icon" href="#">
 
 </head>
 <body>
@@ -248,6 +249,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- JS Script link -->
-    <link rel="stylesheet" href="../popquiz/assets/js/script.js">
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
