Create quiz.html page to open pop quiz

--- a/index.html
+++ b/index.html
@@ -37,7 +37,53 @@
                         <div><button id="start-btn">Start</button></div>
                         <!-- <h2 class="title">Learn something new each day.</h2> -->
                         <div>
-
+                        <!-- Start of modal -->
+                        <div id="myModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <div>
+                                    <div id="game" class="flex-center flex-column">
+                                        <div id="hud">
+                                            <div class="hud-item">
+                                                <p id="progressText" class="hud-prefix">
+                                                    Question
+                                                </p>
+                                                <div id="progressBar">
+                                                    <div id="progressBarFull" aria-label="Progress bar"></div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="hud-item">
+                                                    <p class="hud-prefix" aria-label="Score">
+                                                        Score
+                                                    </p>
+                                                    <h1 class="hud-main-text" id="score">
+                                                        0
+                                                    </h1>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <h2 id="question">What is the answer to this question</h2>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 1">A</button>
+                                            <button class="click choice-text" data-number="1" aria-label="Choice number 1">Choice 1</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 2">B</button>
+                                            <button class="click choice-text" data-number="2" aria-label="Choice number 2">Choice 2</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 3">C</button>
+                                            <button class="click choice-text" data-number="3" aria-label="Choice number 3">Choice 3</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 4">D</button>
+                                            <button class="click choice-text" data-number="4" aria-label="Choice number 4">Choice 4</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- quiz info -->
                         <div>
                             <div class="rule-box">
