--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <h1 class="name">Try our pop quiz!</h1>
                         
                         <!-- start button -->
-                        <div><button id="start-btn">Start</button></div>
+                        <div><button id="myBtn">Start
+                            <!-- <a href="quiz.html"></a> -->
+                        </button></div>
                         <!-- <h2 class="title">Learn something new each day.</h2> -->
                         <div>
                         <!-- Start of modal -->
@@ -181,29 +183,11 @@
                             <thead>
                               <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
+                                <th scope="col">Player name</th>
+                                <th scope="col">Score</th>
                               </tr>
                             </thead>
-                            <tbody>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
-                              </tr>
+                            <tbody id="highScoresList">
                             </tbody>
                           </table>
                     </div>
@@ -290,6 +274,10 @@
             </div>
         </div>
     </footer>
+
+    <!--- temporal added elements -->
+    <div id="finalScore"></div>
+    <div id="username"></div>
 
     <!-- Bootstrap CDN Script link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
