--- a/quiz.html
+++ b/quiz.html
@@ -100,7 +100,7 @@
                     </div>
                 </div> -->
     <!-- Full screen modal -->
-    <div class="modal-dialog modal-fullscreen">
+    <div id="start-btn" class="modal-dialog modal-fullscreen myBtn">
       <div class="container">
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>  
       </div>
