Add toggle to hide content for quiz

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
+    <section id="leaderboadr-panel" class="container-fluid">
         <div class="row">
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
@@ -229,6 +229,13 @@
                         </div>
                     </div>
                 </div> -->
+            </div>
+        </div>
+    </section>
+    <section id="game-panel" class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 section-column">
+                Game
             </div>
         </div>
     </section>
