Create button to start quiz and link to open modal window

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
                         <h1 class="name">Try our pop quiz!</h1>
                         
                         <!-- start button -->
-                        <div><button id="myBtn">Start
-                            <!-- <a href="quiz.html"></a> -->
-                        </button></div>
-                        <!-- <h2 class="title">Learn something new each day.</h2> -->
+                        <div>
+                            <button id="myBtn" class="click quiz-box-button">LET'S PLAY <br><i class="fas fa-play"></i></button>
+                        </div>
                         <div>
                         <!-- Start of modal -->
                         <div id="myModal" class="modal">
@@ -87,7 +86,7 @@
                             </div>
                         </div>
                         <!-- quiz info -->
-                        <div>
+                        <!-- <div>
                             <div class="rule-box">
                                 <span class="rule-title">Rules</span>
                             </div>
@@ -102,7 +101,7 @@
                                 <button class="quit">Exit</button>
                                 <button class="quit">continue</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="row g-0">
