--- a/index.html
+++ b/index.html
@@ -38,8 +38,70 @@
                             <button id="myBtn" class="click quiz-box-button">LET'S PLAY <br><i class="fas fa-play"></i></button>
                         </div>
                         <div>
+                        
+                        <!-- Fullscreen modal -->
+                        <!-- Full screen modal -->
+                        <div id="myModal" class="modal click" tabindex="-1">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title">Modal title</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                  <p>Modal body text goes here.</p>
+                                  <div>
+                                    <div id="game" class="flex-center flex-column">
+                                        <div id="hud">
+                                            <div class="hud-item">
+                                                <p id="progressText" class="hud-prefix">
+                                                    Question
+                                                </p>
+                                                <div id="progressBar">
+                                                    <div id="progressBarFull" aria-label="Progress bar"></div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="hud-item">
+                                                    <p class="hud-prefix" aria-label="Score">
+                                                        Score
+                                                    </p>
+                                                    <h1 class="hud-main-text" id="score">
+                                                        0
+                                                    </h1>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <h2 id="question">What is the answer to this question</h2>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 1">A</button>
+                                            <button class="click choice-text" data-number="1" aria-label="Choice number 1">Choice 1</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 2">B</button>
+                                            <button class="click choice-text" data-number="2" aria-label="Choice number 2">Choice 2</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 3">C</button>
+                                            <button class="click choice-text" data-number="3" aria-label="Choice number 3">Choice 3</button>
+                                        </div>
+                                        <div class="choice-container">
+                                            <button class="click choice-prefix" aria-label="Choice number 4">D</button>
+                                            <button class="click choice-text" data-number="4" aria-label="Choice number 4">Choice 4</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                  <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
                         <!-- Start of modal -->
-                        <div id="myModal" class="modal">
+                        <!-- <div id="myModal" class="modal"> 
                             <div class="modal-content">
                                 <span class="close">&times;</span>
                                 <div>
@@ -84,7 +146,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>  -->
                         <!-- quiz info -->
                         <!-- <div>
                             <div class="rule-box">
@@ -125,7 +187,7 @@
             </div>
         </div>
     </header>
-    <section id="leaderboadr-panel" class="container-fluid">
+    <section id="leaderboard-panel" class="container-fluid">
         <div class="row">
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
