--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                  <p>Modal body text goes here.</p>
-                                  <div>
+                                  <div class="container-fluid">
                                     <div id="game" class="flex-center flex-column">
                                         <div id="hud">
                                             <div class="hud-item">
@@ -75,20 +74,20 @@
                                         </div>
                                         <h2 id="question">What is the answer to this question</h2>
                                         <div class="choice-container">
-                                            <button class="click choice-prefix" aria-label="Choice number 1">A</button>
-                                            <button class="click choice-text" data-number="1" aria-label="Choice number 1">Choice 1</button>
+                                            <button type="button" class="click choice-prefix btn btn-dark" aria-label="Choice number 1">A</button>
+                                            <button type="button" class="click choice-text btn btn-light" data-number="1" aria-label="Choice number 1">Choice 1</button>
                                         </div>
                                         <div class="choice-container">
-                                            <button class="click choice-prefix" aria-label="Choice number 2">B</button>
-                                            <button class="click choice-text" data-number="2" aria-label="Choice number 2">Choice 2</button>
+                                            <button type="button" class="click choice-prefix btn btn-dark" aria-label="Choice number 2">B</button>
+                                            <button type="button" class="click choice-text btn btn-light" data-number="2" aria-label="Choice number 2">Choice 2</button>
                                         </div>
                                         <div class="choice-container">
-                                            <button class="click choice-prefix" aria-label="Choice number 3">C</button>
-                                            <button class="click choice-text" data-number="3" aria-label="Choice number 3">Choice 3</button>
+                                            <button type="button" class="click choice-prefix btn btn-dark" aria-label="Choice number 3">C</button>
+                                            <button type="button" class="click choice-text btn btn-light" data-number="3" aria-label="Choice number 3">Choice 3</button>
                                         </div>
                                         <div class="choice-container">
-                                            <button class="click choice-prefix" aria-label="Choice number 4">D</button>
-                                            <button class="click choice-text" data-number="4" aria-label="Choice number 4">Choice 4</button>
+                                            <button type="button" class="click choice-prefix btn btn-dark" aria-label="Choice number 4">D</button>
+                                            <button type="button" class="click choice-text btn btn-light" data-number="4" aria-label="Choice number 4">Choice 4</button>
                                         </div>
                                     </div>
                                 </div>
@@ -106,20 +105,22 @@
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">QUIT</button>
                                 <button type="button" class="btn btn-primary">Save SCORE</button>
                             </div>
-                        </div>
-                        <!-- new modal open for end of pop quiz -->
-                        <div class="container d-none">
-                            <div id="highScores" class="flex-center flex-column">
-                                <h1 id="finalScore" class="text-center">0</h1>
-                                <form class="end-form-container">
-                                    <p id="end-text">Enter your name below to save your score</p>
-                                    <input type="text" class="click" name="name" id="username" placeholder="Enter your name">
-                                    <button type="submit" class="click quiz-button" id="saveScoreButton" onclick="saveHighScore(event)" aria-label="Click to save score" disabled>Save</button>
-                                </form>
-                                <a href="index.html" class="click quiz-button" aria-label="Return home (click to return to homepage)">RESTART</a>
+                            <!-- end of pop quiz -->
+                            <div class="container">
+                                <div id="highScores" class="flex-center flex-column">
+                                    <h1 id="finalScore" class="text-center">0</h1>
+                                    <form class="end-form-container">
+                                        <p id="end-text">Enter your name below to save your score</p>
+                                        <input type="text" class="click" name="name" id="username" placeholder="Enter your name">
+                                        <button type="submit" class="click quiz-button" id="saveScoreButton" onclick="saveHighScore(event)" aria-label="Click to save score" disabled>Save</button>
+                                    </form>
+                                    <a href="index.html" class="click quiz-button" aria-label="Return home (click to return to homepage)">QUIT</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        
+                        
                     </div>
                 </div>
                 <div class="row g-0 d-none">
@@ -195,7 +196,7 @@
             <!-- <div class="col-md-12 bg-color-three-reasons section-column"> -->
             <div class="container-fluid">
                 <div id="leaderboard-details" class="bg-color-three-reasons">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col">
                             <h3 class="section-heading uppercase text-white">Leaderboard</h3>
                         </div>
