Update modal pop quiz to fullscreen on all device sizes

--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
                             <!-- start button -->
                             <div class="justify-content-center">
                                 <button type="button" id="myBtn"
-                                    class="click shadow-lg rounded btn btn-warning btn-lg quiz-button"><i
-                                        class="fas fa-play"></i> START QUIZ</button>
-                                <!-- <button id="myBtn" class="click quiz-box-button"><i class="fas fa-play"></i>LET'S PLAY <br></button> -->
+                                    class="click shadow-lg rounded btn btn-warning btn-lg quiz-button">
+                                    <i class="fas fa-play"></i> 
+                                    START QUIZ
+                                </button>
                             </div>
                             <div>
 
                                 <!-- Full screen modal -->
-                                <div id="myModal" class="modal modal-fullscreen click" tabindex="-1">
+                                <div id="myModal" class="modal click" tabindex="-1">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header bg-modal-pop-quiz">
@@ -158,8 +159,6 @@
                                                     data-bs-dismiss="modal">QUIT</button>
                                                 <button type="button" class="btn btn-primary">Save SCORE</button>
                                             </div>
-
-
                                         </div>
                                     </div>
                                 </div>
