--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
                                                             </div>
                                                             <div>
                                                                 <div class="hud-item">
-                                                                    <p class="hud-prefix" aria-label="Score">
+                                                                    <p class="hud-prefix mt-2" aria-label="Score">
                                                                         Score
                                                                     </p>
-                                                                    <h1 class="hud-main-text" id="score">
+                                                                    <h1 class="hud-main-text mb-2" id="score">
                                                                         0
                                                                     </h1>
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <h2 id="question">What is the answer to this question</h2>
-                                                        <div class="choice-container">
+                                                        <h2 id="question" class="mt-3 mb-3">What is the answer to this question</h2>
+                                                        <div class="choice-container mt-3 mb-3">
                                                             <button type="button"
                                                                 class="click choice-prefix btn btn-dark"
                                                                 aria-label="Choice number 1">A</button>
@@ -94,7 +94,7 @@
                                                                 class="click choice-text btn btn-light" data-number="1"
                                                                 aria-label="Choice number 1">Choice 1</button>
                                                         </div>
-                                                        <div class="choice-container">
+                                                        <div class="choice-container mt-3 mb-3">
                                                             <button type="button"
                                                                 class="click choice-prefix btn btn-dark"
                                                                 aria-label="Choice number 2">B</button>
@@ -102,7 +102,7 @@
                                                                 class="click choice-text btn btn-light" data-number="2"
                                                                 aria-label="Choice number 2">Choice 2</button>
                                                         </div>
-                                                        <div class="choice-container">
+                                                        <div class="choice-container mt-3 mb-3">
                                                             <button type="button"
                                                                 class="click choice-prefix btn btn-dark"
                                                                 aria-label="Choice number 3">C</button>
@@ -110,7 +110,7 @@
                                                                 class="click choice-text btn btn-light" data-number="3"
                                                                 aria-label="Choice number 3">Choice 3</button>
                                                         </div>
-                                                        <div class="choice-container">
+                                                        <div class="choice-container mt-3 mb-3">
                                                             <button type="button"
                                                                 class="click choice-prefix btn btn-dark"
                                                                 aria-label="Choice number 4">D</button>
@@ -121,8 +121,40 @@
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
+                                                    <section id="leaderboard-panel" class="container-fluid">
+                                                        <div class="row">
+                                                            <!-- Leaderboard in modal pop quiz-->
+                                                
+                                                            <!-- <div class="col-md-12 bg-color-three-reasons section-column"> -->
+                                                            <div class="container-fluid">
+                                                                <div id="leaderboard-details" class="bg-color-three-reasons">
+                                                                    <div class="row justify-content-center">
+                                                                        <div class="col">
+                                                                            <h3 class="section-heading uppercase text-white">Leaderboard</h3>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row">
+                                                                        <div class="col">
+                                                                            <table class="table table-dark">
+                                                                                <thead>
+                                                                                    <tr>
+                                                                                        <th scope="col">#</th>
+                                                                                        <th scope="col">Player name</th>
+                                                                                        <th scope="col">Score</th>
+                                                                                    </tr>
+                                                                                </thead>
+                                                                                <tbody id="highScoresList">
+                                                                                </tbody>
+                                                                            </table>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </section>
+
                                                     <!-- Enter name and get score section -->
-                                                    <section id="playerInfoPanel" class="container-fluid d-none">
+                                                    <section id="playerInfoPanel" class="container-fluid">
                                                         <div class="row">
                                                             <h1 id="playerInfoFormFinalScore" class="text-center">0</h1>
                                                             <form id="playerInfoForm" class="end-form-container">
@@ -145,30 +177,10 @@
                                                                     <div id="username">username</div>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div> 
+                                                    </section>
                                                 </div>
-
-                                                <!-- end of pop quiz -->
-                                                <!-- <div class="container">
-                                                    <div id="highScores" class="flex-center flex-column">
-                                                        <h1 id="finalScore" class="text-center">0</h1>
-                                                        <form class="end-form-container">
-                                                            <p id="end-text">Enter your name below to save your score
-                                                            </p>
-                                                            <input type="text" class="click" name="name" id="username"
-                                                                placeholder="Enter your name">
-                                                            <button type="submit" class="click quiz-button"
-                                                                id="saveScoreButton"
-                                                                aria-label="Click to save score">SAVE SCORE</button>
-                                                        </form>
-                                                        <a href="index.html" type="button"
-                                                            class="click btn btn-secondary"
-                                                            aria-label="Return home (click to return to homepage)">RETURN
-                                                            HOME</a>
-                                                    </div>
-                                                </div> -->
-                                            </div>
-                                            <div>
+                                            <div class="d-none">
                                                 <button type="button" class="btn btn-secondary"
                                                     data-bs-dismiss="modal">QUIT</button>
                                                 <button type="button" class="btn btn-primary">Save SCORE</button>
@@ -201,10 +213,13 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Enter name and get score section -->
-    <section id="playerInfoPanel" class="container-fluid">
+    <section id="playerInfoPanel" class="container-fluid d-none">
         <div class="row">
             <h1 id="playerInfoFormFinalScore" class="text-center">0</h1>
             <form id="playerInfoForm" class="end-form-container">
@@ -215,7 +230,7 @@
             </form>
         </div>
     </section>
-    <section id="leaderboard-panel" class="container-fluid">
+    <section id="leaderboard-panel" class="container-fluid d-none">
         <div class="row">
             <!-- Leaderboard -->
 
