Organise and style homepage and quiz button to achieve simplicity

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <a href="index.html" class="col-md-4 logo">
                 </a>
                 <div class="col-md-8">
-                    <div class="row g-0 bg-color-name-title">
+                    <div class="row bg-color-name-title">
                         <div class="col heading">
-                            <h1 class="name justify-content-center">Try our pop quiz!</h1>
+                            <h1 class="name justify-content-center margin-space">Got a minute to spare. Why not try our brand new quiz!</h1>
 
                             <!-- start button -->
                             <div class="justify-content-center">
@@ -189,7 +189,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row g-0 d-none">
+                            <!-- <div class="row g-0 d-none">
                                 <div class="col">
                                     <ul id="nav" class="list-inline menucontainer">
                                         <li class="col-6 m-0 col-sm-3 ui-menu-color-home list-inline-item menuitem">
@@ -210,13 +210,38 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- Main navigation bar -->
+
+    <div class="row g-0 d-none">
+        <div class="col">
+            <ul id="nav" class="list-inline menucontainer">
+                <li class="col-6 m-0 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                    <a href="#" class="hvr-sweep-to-bottom"><i
+                            class="fas fa-home"></i><span>Home</span></a>
+                </li>
+                <li class="col-6 m-0 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                    <a href="#" class="hvr-sweep-to-bottom click"><i
+                            class="fas fa-question-circle"></i><span>Quiz</span></a>
+                </li>
+                <li class="col-6 m-0 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                    <a href="#" class="hvr-sweep-to-bottom"><i
+                            class="fas fa-trophy"></i><span>Leaderboard</span></a>
+                </li>
+                <li class="col-6 m-0 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                    <a href="#" class="hvr-sweep-to-bottom"><i
+                            class="fas fa-copyright"></i><span>Credits</span></a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
     <!-- Enter name and get score section -->
     <section id="playerInfoPanel" class="container-fluid d-none">
@@ -264,14 +289,14 @@
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
-            <div class="col-sm-4">
+            <!-- <div class="col-sm-6">
                 <h5 class="uppercase general-sub"><i class="fas fa-copyright"></i> Credits</h5>
                 <p class="inline-block">Special mention to my mentor Guido and those at Code Institute, who continuously
                     encouraged me to get out of my comfort zone and try new things.
                     I hope that you too, will break out of your shell and try something new today.
                 </p>
-            </div>
-            <div class="col-sm-4">
+            </div> -->
+            <!-- <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download Leaderboard</h5>
                 <p class="inline-block">Need a printable version of the leaderboard? Download it here.
                     <a href="#" target="_black" class="cv-pdf">
@@ -279,7 +304,7 @@
                         <span class="sr-only">Download link</span>
                     </a>
                 </p>
-            </div>
+            </div> -->
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Follow Us</h5>
                 <ul class="list-inline social-links">
@@ -301,7 +326,25 @@
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-tiktok" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
                 </ul>
+            </div>
+            <div class="col-sm-8">
+                <h5 class="uppercase general-sub"><i class="fas fa-copyright"></i> Credits</h5>
+                <p class="inline-block">Special mention to my mentor Guido and those at Code Institute, who continuously
+                    encouraged me to get out of my comfort zone and try new things.
+                </p>
             </div>
         </div>
     </footer>
