Style submit button

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                                                                 <p id="end-text">Enter your name below to save your score
                                                                 </p>
                                                                 <input type="text" class="click" id="playername" placeholder="Enter your name" required>
-                                                                <button type="submit" class="click quiz-button" aria-label="Click to save score">Ok</button>
+                                                                <!-- <button type="submit" class="click quiz-button" aria-label="Click to save score">Ok</button> -->
+                                                                <button type="submit" class="click btn btn-primary btn-lg" aria-label="Click to save score">OK</button>
                                                             </form>
                                                         </div>
                                                     </section>
